--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "debug": "~2.0.0",
     "ejs": "~0.8.5",
     "mongodb": "1.4.15",
-    "express-helpers": "1.3.1"
+    "express-helpers": "1.3.1",
+    "express-session": "*"
   },
 
   "scripts": {
