--- a/package.json
+++ b/package.json
@@ -14,11 +14,10 @@
 
   "dependencies": {
     "express": ">= 4.0.0",
-    "monk": ">= 0.9.0",
+    "mongoose": "*",
     "body-parser": "~1.8.1",
     "cookie-parser": "~1.3.3",
     "morgan": "~1.3.0",
-    "serve-favicon": "~2.1.3",
     "debug": "~2.0.0",
     "ejs": "~0.8.5",
     "mongodb": "1.4.15",
